[package]
name = "rustpad-server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
bytecount = "0.6"
dashmap = "4.0.2"
dotenv = "0.15.0"
futures = "0.3.15"
log = "0.4"
operational-transform = { version = "0.6.0", features = ["serde"] }
parking_lot = "0.11.1"
pretty_env_logger = "0.4.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1.6"
warp = "0.3"

[dev-dependencies]
tempfile = "3"
